k8s/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: training-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: training-credential # must be the same as secret
      hosts:
        - motd.neubert
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: motd
spec:
  hosts:
    - "motd.neubert"
  gateways:
    - training-gateway
  http:
    - match:
        - uri:
            prefix: /motd
      route:
        - destination:
            port:
              number: 8080
            host: motd-service
